--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,13 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env"
-    ],
+	  "webpack-env",
+	  "dom-mediacapture-record"
+	],
     "paths": {
       "@/*": [
         "src/*"
-      ]
+	  ]
     },
     "lib": [
       "esnext",
